--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -331,6 +331,7 @@
     <string name="loadingprayertimes">Renewing prayer times</string>
     <string name="prayertimesloaded">Prayer times have been updated</string>
     <string name="errorloadprayertimes">Faulty renewal of prayer times</string>
+    <string name="errorloadhijridate" translatable="false">Faulty renewal of hijri date</string>
 
     <!--Notification Messages-->
     <string name="AdkarExtra1">The adhkaar illuminates the servant his path in his world and in the afterlife and on the straight path</string>
